syntax = "proto3";

package proto;

message Color {
	message Rgba {
		uint32 red = 1;
		uint32 green = 2;
		uint32 blue = 3;
		double opacity = 4;
	}

    Rgba rgba = 1;
    string name = 2;
    bool is_rgba = 3;
}